bk_ida/bzip2ida/c1/unRLE_obuf_to_output_FAST
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/unRLE_obuf_to_output_FAST/src/bzlib.c:1379:7: error: use of undeclared identifier 'invalid_operation'
v57 = __CFADD__( v59 - avail_out, s->strm->total_out_lo32); 
      ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/unRLE_obuf_to_output_FAST/src/bzlib.c:861:25: note: expanded from macro '__CFADD__'
#define __CFADD__(x, y) invalid_operation // Generate carry flag for (x+y)
                        ^
1 error generated.
make: *** [/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/unRLE_obuf_to_output_FAST/src/obj/bzlib.o] Error 1
